<resources>
    <string name="app_name">农作物病虫害识别</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="agree_terms">我已阅读并同意《用户协议》和《隐私政策》</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="recognize">识别</string>
    <string name="pick_image">选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="result">识别结果</string>
    <string name="confidence">置信度</string>
</resources>
